Tugas Widya Rinjani

--- a/2210312062_petrol_calculator.ipynb
+++ b/2210312062_petrol_calculator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
      "text": [
       "Selamat datang di SPBU UPNVJ FT\n",
       "360000 a\n",
-      "Widya Rinjani telah membeli tipe bbm pertalait seharga 12000 dengan total belanja 360000 rupiah\n",
+      "Widya Rinjani telah membeli tipe bbm pertameks seharga 12000 dengan total belanja 360000 rupiah\n",
       "\n",
       "\n",
       "Recursion Example Results\n",
@@ -25,7 +25,7 @@
        "360000"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
     "\n",
     "# print dengan contoh output yudi  telah membeli tipe bbm selar seharga  12000 dengan total belanja 360000 rupiah\n",
     "nama = biodata_pembeli[0]\n",
-    "bbm = tipe_bbm[0]\n",
+    "bbm = tipe_bbm[1]\n",
     "total = hitung_biaya_bbm(30, 12000)\n",
     "\n",
     "print (f\"{nama} telah membeli tipe bbm {bbm} seharga {pertameks} dengan total belanja {total} rupiah\")\n",
