pengumpulan tugas patrol

--- a/Ardiyanto_2210312090.ipynb
+++ b/Ardiyanto_2210312090.ipynb
@@ -55,7 +55,7 @@
     "def identitas_pembeli(nama,nomor_hape,pekerjaan):\n",
     "   return (nama, nomor_hape,pekerjaan)\n",
     "\n",
-    "biodata_pembeli = identitas_pembeli(\"Alyssa Fitriani\", \"085772653864\",\"Public Relation\")\n",
+    "biodata_pembeli = identitas_pembeli(\"Ardiyanto\", \"085697203696\",\"Public Relation\")\n",
     "print (biodata_pembeli)\n",
     "\n",
     "#Diketahui terdapat jenis bahan bakar yang dapat diisi (pertalait, pertameks, dan selar)\n",
