--- a/Tugas Petrol Adit.ipynb
+++ b/Tugas Petrol Adit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,24 +10,26 @@
      "output_type": "stream",
      "text": [
       "Selamat datang di SPBU UPNVJ FT\n",
-      "('Alyssa Fitriani', '085772653864', 'Public Relation')\n",
+      "('Aditya Yudhistira Wirawan', '081906862556', 'Public Figure')\n",
       "['pertalait', 'pertameks', 'selar']\n",
-      "('Ayla', 30)\n",
-      "360000 a\n",
-      "Alyssa Fitriani telah membeli tipe bbm pertameks seharga 12000 dengan total belanja 360000 rupiah\n",
+      "('Avanza', 10)\n",
+      "120000 a\n",
+      "Aditya Yudhistira Wirawan telah membeli tipe bbm pertameks seharga 12000 dengan total belanja 120000 rupiah\n",
       "\n",
       "\n",
       "Recursion Example Results\n",
-      "20000\n"
+      "20000\n",
+      "140000\n",
+      "260000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "20000"
+       "260000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +57,7 @@
     "def identitas_pembeli(nama,nomor_hape,pekerjaan):\n",
     "   return (nama, nomor_hape,pekerjaan)\n",
     "\n",
-    "biodata_pembeli = identitas_pembeli(\"Alyssa Fitriani\", \"085772653864\",\"Public Relation\")\n",
+    "biodata_pembeli = identitas_pembeli(\"Aditya Yudhistira Wirawan\", \"081906862556\",\"Public Figure\")\n",
     "print (biodata_pembeli)\n",
     "\n",
     "#Diketahui terdapat jenis bahan bakar yang dapat diisi (pertalait, pertameks, dan selar)\n",
@@ -78,7 +80,7 @@
     "    return (nama_brand,jumlah_liter)\n",
     "\n",
     "#panggil fyungsi jenis_mobil\n",
-    "identifikasi_kendaraan = jenis_mobil(\"Ayla\", 30)\n",
+    "identifikasi_kendaraan = jenis_mobil(\"Avanza\", 10)\n",
     "print (identifikasi_kendaraan)\n",
     "\n",
     "def hitung_biaya_bbm(liter, harga):\n",
@@ -117,7 +119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -131,12 +133,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "107d7b120a5b68773a87d4067e673630b35702e55ebab3138143d08b1c4d7cbc"
+    "hash": "3d86237bf704886635957959de6b734fe4177548ca2ca78202994b318aa4b602"
    }
   }
  },
