--- a/danielsteven.ipynb
+++ b/danielsteven.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,24 +10,24 @@
      "output_type": "stream",
      "text": [
       "Selamat datang di SPBU UPNVJ FT\n",
-      "('Alyssa Fitriani', '085772653864', 'Public Relation')\n",
+      "('Daniel Steven Santoso', '081905870217', 'Mahasiswa')\n",
       "['pertalait', 'pertameks', 'selar']\n",
-      "('Ayla', 30)\n",
-      "360000 a\n",
-      "Alyssa Fitriani telah membeli tipe bbm pertameks seharga 12000 dengan total belanja 360000 rupiah\n",
+      "('BeAT', 25)\n",
+      "300000 a\n",
+      "Daniel Steven Santoso telah membeli tipe bbm pertameks seharga 12000 dengan total belanja 300000 rupiah\n",
       "\n",
       "\n",
       "Recursion Example Results\n",
-      "20000\n"
+      "80000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "20000"
+       "80000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -131,12 +131,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "107d7b120a5b68773a87d4067e673630b35702e55ebab3138143d08b1c4d7cbc"
+    "hash": "60e3baaf0d9150201909656e65448b29902506d837bde84e10252942c4c1f9ba"
    }
   }
  },
