--- a/2210312048_MFarhanInarta_Tugas Petrol.ipynb
+++ b/2210312048_MFarhanInarta_Tugas Petrol.ipynb
@@ -55,7 +55,7 @@
     "def identitas_pembeli(nama,nomor_hape,pekerjaan):\n",
     "   return (nama, nomor_hape,pekerjaan)\n",
     "\n",
-    "biodata_pembeli = identitas_pembeli(\"Alyssa Fitriani\", \"085772653864\",\"Public Relation\")\n",
+    "biodata_pembeli = identitas_pembeli(\"Farhan Inarta\", \"080008000800\",\"Public Enemy\")\n",
     "print (biodata_pembeli)\n",
     "\n",
     "#Diketahui terdapat jenis bahan bakar yang dapat diisi (pertalait, pertameks, dan selar)\n",
@@ -78,7 +78,7 @@
     "    return (nama_brand,jumlah_liter)\n",
     "\n",
     "#panggil fyungsi jenis_mobil\n",
-    "identifikasi_kendaraan = jenis_mobil(\"Ayla\", 30)\n",
+    "identifikasi_kendaraan = jenis_mobil(\"Shogun\", 30)\n",
     "print (identifikasi_kendaraan)\n",
     "\n",
     "def hitung_biaya_bbm(liter, harga):\n",
@@ -117,7 +117,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -131,12 +131,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "107d7b120a5b68773a87d4067e673630b35702e55ebab3138143d08b1c4d7cbc"
+    "hash": "4843b59a50d53115dfcf12bb5a76188c774068f1b08aeab6738f76e1871b699a"
    }
   }
  },
