--- a/2210312048_MFarhanInarta_Tugas Petrol.ipynb
+++ b/2210312048_MFarhanInarta_Tugas Petrol.ipynb
@@ -2,36 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selamat datang di SPBU UPNVJ FT\n",
-      "('Alyssa Fitriani', '085772653864', 'Public Relation')\n",
-      "['pertalait', 'pertameks', 'selar']\n",
-      "('Ayla', 30)\n",
-      "360000 a\n",
-      "Alyssa Fitriani telah membeli tipe bbm pertameks seharga 12000 dengan total belanja 360000 rupiah\n",
-      "\n",
-      "\n",
-      "Recursion Example Results\n",
-      "20000\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "20000"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!/usr/bin/env python3\n",
     "# -*- coding: utf-8 -*-\n",
@@ -117,7 +90,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -131,12 +104,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4843b59a50d53115dfcf12bb5a76188c774068f1b08aeab6738f76e1871b699a"
+    "hash": "2b0abf84a48ddbbb004077ae069f69ca4c2554164f0276c098facf6b9aa6d441"
    }
   }
  },
