--- a/tugasalyssa.ipynb
+++ b/tugasalyssa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
     "def identitas_pembeli(nama,nomor_hape,pekerjaan):\n",
     "   return (nama, nomor_hape,pekerjaan)\n",
     "\n",
-    "biodata_pembeli = identitas_pembeli(\"Alyssa Fitriani\", \"085772653864\",\"Public Relation\")\n",
+    "biodata_pembeli = identitas_pembeli(\"Delroy Marvel\", \"081256438746\",\"Mahasiswi\")\n",
     "print (biodata_pembeli)\n",
     "\n",
     "#Diketahui terdapat jenis bahan bakar yang dapat diisi (pertalait, pertameks, dan selar)\n",
@@ -78,7 +78,7 @@
     "    return (nama_brand,jumlah_liter)\n",
     "\n",
     "#panggil fyungsi jenis_mobil\n",
-    "identifikasi_kendaraan = jenis_mobil(\"Ayla\", 30)\n",
+    "identifikasi_kendaraan = jenis_mobil(\"Ferrari\", 50)\n",
     "print (identifikasi_kendaraan)\n",
     "\n",
     "def hitung_biaya_bbm(liter, harga):\n",
