--- a/2210312044_NABILA AURORA S_PETROL CALCU.ipynb
+++ b/2210312044_NABILA AURORA S_PETROL CALCU.ipynb
@@ -10,21 +10,19 @@
      "output_type": "stream",
      "text": [
       "Selamat datang di SPBU UPNVJ FT\n",
-      "('Alyssa Fitriani', '085772653864', 'Public Relation')\n",
-      "['pertalait', 'pertameks', 'selar']\n",
-      "('Ayla', 30)\n",
-      "360000 a\n",
-      "Alyssa Fitriani telah membeli tipe bbm pertameks seharga 12000 dengan total belanja 360000 rupiah\n",
+      "360000 Rupiah\n",
+      "Don telah membeli tipe bbm pertameks seharga 12000 dengan total belanja 360000 rupiah\n",
       "\n",
       "\n",
       "Recursion Example Results\n",
-      "20000\n"
+      "0\n",
+      "360000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "20000"
+       "360000"
       ]
      },
      "execution_count": 8,
@@ -53,10 +51,10 @@
     "\n",
     "#masukkan data nama pembeli yang meliputi (nama,nomerHape, pekerjaan) \n",
     "def identitas_pembeli(nama,nomor_hape,pekerjaan):\n",
-    "   return (nama, nomor_hape,pekerjaan)\n",
+    "   return (nama,nomor_hape,pekerjaan)\n",
     "\n",
-    "biodata_pembeli = identitas_pembeli(\"Alyssa Fitriani\", \"085772653864\",\"Public Relation\")\n",
-    "print (biodata_pembeli)\n",
+    "biodata_pembeli = identitas_pembeli(\"Don\", \"0987654321\", \"VP\")\n",
+    "\n",
     "\n",
     "#Diketahui terdapat jenis bahan bakar yang dapat diisi (pertalait, pertameks, dan selar)\n",
     "def jenis_bbm(bbm):\n",
@@ -65,36 +63,36 @@
     "\n",
     "#masukkan data bbm\n",
     "tipe_bbm =[\"pertalait\", \"pertameks\", \"selar\"]\n",
-    "print (tipe_bbm)\n",
     "\n",
     "#harga untuk pertalait = 10000, pertamek = 12000, selar = 5000\n",
     "pertalait = 10000\n",
-    "pertameks =  12000\n",
+    "pertameks = 12000 \n",
     "selar = 5000\n",
     "\n",
     "#buatlah sebuah  fungsi yang mengidentifikasi jenis mobil pemberli dan jumlah liter kebutuhan\n",
     "\n",
     "def jenis_mobil (nama_brand,jumlah_liter):\n",
-    "    return (nama_brand,jumlah_liter)\n",
+    "    return (nama_brand, jumlah_liter)\n",
     "\n",
     "#panggil fyungsi jenis_mobil\n",
-    "identifikasi_kendaraan = jenis_mobil(\"Ayla\", 30)\n",
-    "print (identifikasi_kendaraan)\n",
+    "identifikasi_kendaraan = jenis_mobil(\"BMW\", 30)\n",
     "\n",
     "def hitung_biaya_bbm(liter, harga):\n",
     "    #rumus\n",
-    "    total_belanja = liter * harga\n",
-    "    return (total_belanja)\n",
-    "   \n",
-    "#panggil fungsi hitung biaya\n",
-    "total_belanja = hitung_biaya_bbm(identifikasi_kendaraan[(1)], pertameks)\n",
+    "    biaya = liter * harga\n",
+    "    return biaya\n",
     "\n",
-    "print (total_belanja, \"a\")\n",
+    "#panggil fungsi hitung biaya\n",
+    "total_belanja = hitung_biaya_bbm(30, 12000)\n",
+    "\n",
+    "print (total_belanja, \"Rupiah\")\n",
     "\n",
     "# print dengan contoh output yudi  telah membeli tipe bbm selar seharga  12000 dengan total belanja 360000 rupiah\n",
     "nama = biodata_pembeli[0]\n",
     "bbm = tipe_bbm[1]\n",
-    "print (nama, \"telah membeli tipe bbm\",bbm, \"seharga\", pertameks, \"dengan total belanja\", total_belanja, \"rupiah\")\n",
+    "total = hitung_biaya_bbm(30, 12000)\n",
+    "\n",
+    "print (f\"{nama} telah membeli tipe bbm {bbm} seharga {pertameks} dengan total belanja {total} rupiah\")\n",
     "\n",
     "#lakukan pembelajaan jika pembeli memiliki uang senilai tertentu lalu hitunglah sampai habis uangnya untuk dibelanjakan\n",
     "#gunakan recursion\n",
@@ -108,7 +106,7 @@
     "  return sisa_uang\n",
     "\n",
     "print(\"\\n\\nRecursion Example Results\")\n",
-    "belanja(380000)\n",
+    "belanja(720000) \n",
     "#output jika uang 720000 dan total_belanja 360000\n",
     "#0\n",
     "#360000"
@@ -117,7 +115,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -131,12 +129,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "107d7b120a5b68773a87d4067e673630b35702e55ebab3138143d08b1c4d7cbc"
+    "hash": "a9cff5a362bc38ef45d817ae74b1af54d6a076e3d773891282bce078b815ba34"
    }
   }
  },
