--- a/TugasKhansa.ipynb
+++ b/TugasKhansa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -10,24 +10,23 @@
      "output_type": "stream",
      "text": [
       "Selamat datang di SPBU UPNVJ FT\n",
-      "('Alyssa Fitriani', '085772653864', 'Public Relation')\n",
+      "('Khansa Zhafira Fitri', '081314951296', 'Head Of Creative')\n",
       "['pertalait', 'pertameks', 'selar']\n",
-      "('Ayla', 30)\n",
-      "360000 a\n",
-      "Alyssa Fitriani telah membeli tipe bbm pertameks seharga 12000 dengan total belanja 360000 rupiah\n",
+      "('Limousine', 50)\n",
+      "600000 a\n",
+      "Khansa Zhafira Fitri telah membeli tipe bbm pertameks seharga 12000 dengan total belanja 600000 rupiah\n",
       "\n",
       "\n",
-      "Recursion Example Results\n",
-      "20000\n"
+      "Recursion Example Results\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "20000"
+       "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +54,7 @@
     "def identitas_pembeli(nama,nomor_hape,pekerjaan):\n",
     "   return (nama, nomor_hape,pekerjaan)\n",
     "\n",
-    "biodata_pembeli = identitas_pembeli(\"Alyssa Fitriani\", \"085772653864\",\"Public Relation\")\n",
+    "biodata_pembeli = identitas_pembeli(\"Khansa Zhafira Fitri\", \"081314951296\",\"Head Of Creative\")\n",
     "print (biodata_pembeli)\n",
     "\n",
     "#Diketahui terdapat jenis bahan bakar yang dapat diisi (pertalait, pertameks, dan selar)\n",
@@ -78,7 +77,7 @@
     "    return (nama_brand,jumlah_liter)\n",
     "\n",
     "#panggil fyungsi jenis_mobil\n",
-    "identifikasi_kendaraan = jenis_mobil(\"Ayla\", 30)\n",
+    "identifikasi_kendaraan = jenis_mobil(\"Limousine\", 50)\n",
     "print (identifikasi_kendaraan)\n",
     "\n",
     "def hitung_biaya_bbm(liter, harga):\n",
@@ -117,7 +116,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -131,12 +130,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "107d7b120a5b68773a87d4067e673630b35702e55ebab3138143d08b1c4d7cbc"
+    "hash": "0b4fb569366886c51a208ec1b456fe6a136b5baed6a0783610d9aaa2abbea8dd"
    }
   }
  },
